sort css updated to fix issue on firefox browser

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -382,7 +382,10 @@ header {
 #sort-selector {
 	-moz-appearance: none;
 	-webkit-appearance: none;
-	color: transparent;
+}
+
+#select-default {
+    color: transparent;
 }
 
 .sort {
